style.css
@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@100..900&display=swap');

html {
    height: 100%;
    width: 100%;
}

body {
    height: 100%;
    width: 100%;
    margin: 0;

    font-family: "Heebo", serif;
    position: absolute;
    top: 0;

    display: flex;

    background-color: #f2f2f7;
}

button {
    font-family: "Heebo", serif;
}

.title {
    text-align: center;
    margin-bottom: 0;
    margin-top: 0;
    font-size: 300%;
}

.greeting {
    color: #ffffff;
    margin-left: 10px;
    margin-top: 0px;
    margin-bottom: 0px;
}

.quotes {
    font-style: italic;
    font-weight: lighter;
    color: #000000;
}

main {
    width: 100%;
    height: auto;
    margin: 0;
    padding-bottom: 350px;
    overflow-y: auto;
    position: relative;
}

.colors {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 200px;
    z-index: -1;

    background: linear-gradient(45deg, #013e89 0%, #2c60d8 29%, #61efff 100%);
    
    mask-image: linear-gradient(to bottom, #000000, #00000000);
    -webkit-mask-image: linear-gradient(to bottom, #000000, rgba(0, 0, 0, 0));
}

.exportDataBtn {
    cursor: pointer;
}

.controls {
    display: flex;
    justify-content: center;
    
    width: 100%;

    position: fixed;
    bottom: 0;
    background-color: #FAFAFA;

    height: 350px;

    box-shadow: 0 0 10px 0 #0000001a;

    border-radius: 15px 15px 0 0;
    transition: transform 0.5s ease-in-out;
}

.controls.collapsed {
    transform: translateY(275px);
    transition: all 0.5s;
}

nav {
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;

    position: sticky;
    top: 0;

    z-index: 100;

    width: 100vw;
    height: 44pt;

    background: #ffffff00;
}

nav.sticky {
    background: #ffffffdc;
    border-bottom: solid #e1e1e1 0.5px;
    backdrop-filter: blur(13px);
    -webkit-backdrop-filter: blur(13px);
    transition: background 0.3s;
}

.navTitle {
    font-weight: bold;
    opacity: 0;
    transition: opacity 0.3s;
}

.startStopBtn {
    background: radial-gradient(#2e61d8, #013f8a);
    color: white;
    
    width: 200px;

    text-align: center;
    text-decoration: none;
    font-size: 250%;

    aspect-ratio: 1;
    cursor: pointer;

    border: none;
    border-radius: 50%;

    padding: 0;
    
    position: absolute;
    bottom: 50px;
}

.pastWorkHoursDisplayContainer {
    margin-bottom: 25px;
}

.pastWorkHoursDisplayTitle {
    font-size: x-large;
    font-weight: bold;

    margin-bottom: 0px;
    margin-left: 10px;
}

.pastWorkHoursDisplay {
    font-size: 150%;
    list-style-type: none;
    background-color: #ffffff;
    border-radius: 10px;
    box-shadow: 0 0 10px 0 #0000001a;

    margin-left: 10px;
    margin-right: 10px;
    margin-top: 0px;

    padding-left: 20px;
}

.pastWorkHoursDisplay li {
    padding: 10px;
    border-bottom: solid #e1e1e1 2px;
    cursor: pointer;
}

.pastWorkHoursDisplay li a {
    text-decoration: none;
    color: #013f8a;
    cursor: pointer;

    position: absolute;
    right: 20px;
}

.pastWorkHoursDisplay li:last-child {
    border-bottom: none;
}

.pastWorkHoursDisplay summary {
    font-weight: bold;
}

.elapsedTime {
    background-color: #585858;
    color: white;

    padding: 20px 50px;
    margin: 0;

    font-weight: bold;
    border-radius: 50px;

    position: absolute;
    bottom: 300px;
}

.elapsedTimeActive {
    background-color: #013f8a;
    background-image: -webkit-linear-gradient(135deg, #ffffff20 25%, transparent 25%, transparent 50%, #ffffff20 50%, #ffffff20 75%, transparent 75%, transparent);
    background-image: linear-gradient(-45deg, #ffffff20 25%, transparent 25%, transparent 50%, #ffffff20 50%, #ffffff20 75%, transparent 75%, transparent);
    background-size: 35px 35px;

    animation: ProgressAnimation 2s linear infinite;
}

@keyframes ProgressAnimation { 
    0% {background-position:0 0}
    100% {background-position:35px 35px}
}

.settingsBtn {
    background: radial-gradient(#2e61d8, #013f8a);
    color: white;

    width: 50px;
    height: 50px;

    text-align: center;
    text-decoration: none;
    font-size: 200%;
    font-weight: bold;

    aspect-ratio: 1;
    cursor: pointer;

    border: none;
    border-radius: 50%;

    padding: 0;
    
    position: absolute;
    bottom: 20px;
    right: 20px;
}

.addHoursBtn {
    background: radial-gradient(#2e61d8, #013f8a);
    color: white;

    width: 50px;
    height: 50px;

    text-align: center;
    text-decoration: none;
    font-size: 200%;
    font-weight: bold;

    aspect-ratio: 1;
    cursor: pointer;

    border: none;
    border-radius: 50%;

    padding: 0;
    
    position: absolute;
    bottom: 20px;
    left: 20px;
}

.settingsMenu, .addHoursMenu {
    display: flex;
    justify-content: center;
    
    width: 100%;

    position: fixed;
    bottom: 0;
    background-color: #FAFAFA;

    height: 90%;
    transform: translateY(100%);

    box-shadow: 0 0 10px 0 #0000001a;

    border-radius: 15px 15px 0 0;

    z-index: 10;

    display: block;
    transition: transform 0.5s ease-in-out;
}

.addHoursMenu.open, .settingsMenu.open {
    transform: translateY(0);
}

.settingsTitle {
    font-size: 200%;
    font-weight: bold;
    margin-left: 10px;
}

.settingsCloseBtn {
    position: fixed;
    color: #013f8a;
    margin-top: 10px;
    left: 10px;
    text-decoration: none;
}

.settingsSaveBtn {
    position: fixed;
    color: #013f8a;
    margin-top: 10px;
    right: 10px;
    text-decoration: none;
}

.exportDataBtn {
    color: #013f8a;
    padding: 5px;
}

.resetDataBtn {
    color: #ff0000;
    padding: 5px;
}

.settingsMenu input, .addHoursMenu input {
    border: none;
    border-radius: 5px;
    padding: 10px 20px;
    margin: 5px 0;
    margin-right: 20px;

    font-family: "Heebo", serif;
    background-color: #EFEFEF;
}

.addHoursMenu ul, .settingsMenu ul {
    list-style-type: none;
    background-color: #ffffff;
    border-radius: 10px;
    box-shadow: 0 0 10px 0 #0000001a;

    margin-left: 10px;
    margin-right: 10px;
    margin-top: 0px;

    padding-left: 20px;

    font-size: 125%;
}

.addHoursMenu li, .settingsMenu li {
    display: flex;
    justify-content: space-between;
    align-items: center;

  
}

.addHoursMenu li:not(:last-child), .settingsMenu li:not(:last-child) {
    border-bottom: solid #e1e1e1 2px;
}

.settingsMenu p, .addHoursMenu p {
    margin-bottom: 0;
    margin-top: 0;
    font-weight: bold;
}

#stopBtn {
    display: flex;    
    justify-content: center;
    align-items: center;
    display: none;
}

#stopBtn::after {
    content: "";
    background-color: #2e61d87e;
    height: 110%;
    width: 110%;
    position: absolute;
    top: -5%;
    left: -5%;
    border-radius: 50%;
    z-index: -1;
    animation: pulse 2s ease-in-out infinite;
}

@keyframes pulse {
    0% {
        height: 100%;
        width: 100%;
        top: 0%;
        left: 0%;
    }
    25% {
        height: 105%;
        width: 105%;
        top: -2.5%;
        left: -2.5%;
    }
    50% {
        height: 110%;
        width: 110%;
        top: -5%;
        left: -5%;
    }
    100% {
        height: 100%;
        width: 100%;
        top: 0;
        left: 0;
    }
}

.linksMenu {
    display: none;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    z-index: 998;
    position: fixed;
    width: 100%;
    height: 100vh;
    left: 0;
    top: 0;
    background-color: #ffffff;
    animation: dropDown 0.5s ease-in-out;
}

@keyframes dropDown {
    0% {
        height: 0vh;
    }
    100% {
        height: 100vh;
    }
}

.linksMenuCloseing {
    animation: dropUp 0.5s ease-in-out;
    height: 0vh;
}

@keyframes dropUp {
    0% {
        height: 100vh;
    }
    100% {
        height: 0vh;
    }
}

.linksMenu a {
    text-decoration: none;
    color: #013f8a;
    font-size: 150%;
    font-weight: bold;
    margin: 10px;
}

.linksMenuBtn {
    background-color: #00000000;

    width: 50px;
    height: 50px;

    text-align: center;
    text-decoration: none;
    font-size: 200%;
    font-weight: bold;

    border: none;
    border-radius: 50%;

    padding: 0;
    position: absolute;
    z-index: 999;

 
    right: 10px;

    display: flex;
    justify-content: center;
    align-items: center;
}

.linksMenuBtn img {
    width: 25px;
    height: 25px;

    filter: invert(1);
}

